# BAR

./: pyproject.toml  requirements.txt
configs/generator/: bar_b.yaml  bar_b_patch2.yaml  bar_b_patch4.yaml  bar_l.yaml  bar_l_res512.yaml
configs/tokenizer/: bar_fsq_10bits_res512.yaml  bar_fsq_16bits.yaml  dino_fsq_dino_16bits.yaml  dino_fsq_rgb_16bits.yaml
data/: __init__.py  tfds_reader.py
modeling/: tokenizer.py
modeling/modules/: __init__.py  blocks.py  losses.py
scripts/: train_bar.py  train_bar_fsq.py
utils/: train_utils.py
