[project]
name = "bar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "einops>=0.8.2",
    "gdown>=5.2.1",
    "huggingface-hub>=0.36.2",
    "omegaconf>=2.3.0",
    "open-clip-torch>=3.3.0",
    "pillow>=12.1.1",
    "scipy>=1.17.1",
    "timm>=1.0.25",
    "torch==2.7.1",
    "torch-fidelity>=0.4.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.22.1",
    "transformers==4.56.1",
    "webdataset>=1.0.2",
    "xformers>=0.0.31.post1",
]
